# ktot

./: LICENSE  README.md
include/ktot/crosscutting/: app_settings_t.h  format_time_t.h  hour_fraction_t.h  serialization.h  time_utils.h  tui_utils.h
include/ktot/domain/: task_filter_t.h  task_repository_t.h  task_service_t.h  task_t.h  work_t.h
include/ktot/repo_json/: task_json_repository_t.h
ktot_app/: CMakeLists.txt  console_app_t.cpp  console_app_t.h  ktot_app_t.cpp  ktot_app_t.h  main.cpp  tui_utils.cpp
ktot_domain/: CMakeLists.txt  task_service_t.cpp  task_t.cpp  work_t.cpp
ktot_repo_json/: CMakeLists.txt  serialization.cpp  task_json_repository_t.cpp
